[gd_scene load_steps=12 format=3 uid="uid://8a8ilg0hni17"]

[ext_resource type="Script" path="res://Game/UI/meta_upgrade_card.gd" id="1_5t3jl"]
[ext_resource type="PackedScene" uid="uid://cciyjiw65okby" path="res://Game/Components/ui_audio_player_component.tscn" id="2_2rq4f"]
[ext_resource type="PackedScene" uid="uid://4xcjv8ohr44n" path="res://Game/UI/sound_button.tscn" id="2_f6qgr"]
[ext_resource type="Texture2D" uid="uid://158h7ihngk5r" path="res://Assets/Items/vial_small_blue.png" id="2_mc6jh"]
[ext_resource type="AudioStream" uid="uid://lomfyabv53vm" path="res://Assets/Sound/UI Sound/switch1.ogg" id="5_j6oyt"]
[ext_resource type="AudioStream" uid="uid://cdqpmchahtoos" path="res://Assets/Sound/UI Sound/switch2.ogg" id="6_lcsws"]
[ext_resource type="AudioStream" uid="uid://6dym5l6ngplq" path="res://Assets/Sound/UI Sound/switch4.ogg" id="7_wbutf"]

[sub_resource type="Animation" id="Animation_bvy6g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_kkq2n"]
resource_name = "selected"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 2.05, 2.05, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.35, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0872665, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ClickAudioPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ali43"]
_data = {
"RESET": SubResource("Animation_bvy6g"),
"selected": SubResource("Animation_kkq2n")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ac2ps"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.458824, 0.890196, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="MetaUpgradeCard" type="PanelContainer" groups=["upgrade_card"]]
custom_minimum_size = Vector2(170, 0)
offset_right = 150.0
offset_bottom = 150.0
pivot_offset = Vector2(75, 75)
script = ExtResource("1_5t3jl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ali43")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="LabelName" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 8
text = "Sample Name"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2
uppercase = true

[node name="LabelDescription" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 4
text = "This is the Description. "
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_mc6jh")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_type_variation = &"BlueOutlineLabel"
text = "50/100"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_ac2ps")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PurchaseButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_f6qgr")]
unique_name_in_owner = true
layout_mode = 2
text = "Purchase"

[node name="ClickAudioPlayer" parent="." instance=ExtResource("2_2rq4f")]
streams = Array[AudioStream]([ExtResource("5_j6oyt"), ExtResource("6_lcsws"), ExtResource("7_wbutf")])
